# HDH

./: .gitattributes  .gitignore  404.html  MANIFEST.in  README.md  README.md      TODO.tex  experiment_results.json  fix_issue_61.md  gen.py  gitignore.io  hdhex.py  index.html  mkdocs.yml  paper.bib  paper.md  partitions.csv  pyproject.toml  pytest.ini  search.html  setup_kahy.text  temp.py  temp_test.py  test.py  test_vis.py
about/: index.html
computational_models/: index.html
contribution/: index.html
database/: README.md  database_gen.py  index.html  warnings_and_news.md
database_generators/: convert_workloads_to_hdh.py  decompress_data.py  generate_leaderboards.py  generate_mbqc_from_qasm.py  query_results.py  run_partition_tests.py  validate_results.py
docs/: about.md  computational_models.md  database.md  figures.py  hdh.md  index.md  intro.md  literature.md  models.md  notes.tex  passes.md  vis.md  why.md
experiment_outputs/: cross_model_results.csv  exp4_comparison_analysis.csv  exp4_kahypar_baseline_results.csv  exp4_temporal_greedy_results.csv  exp5_capacity_violation_raw.csv  exp5_capacity_violation_vs_slack_summary.csv  overhead_analysis_results.csv  qpu_scaling_results.csv
experiment_outputs_heuristic_100q/: quick_benchmark_100q.csv
experiment_outputs_mqtbench/: algorithm_performance.csv  combinecsv.py  comparison_results_10_qubit-level.csv  comparison_results_10_qubit-level_updated.csv  comparison_results_10_qubit-level_weighted.csv  comparison_results_qubit-level.csv  comparison_results_timed_weighted.csv  exp1_overhead_scaling.csv  (+12 more)
(+12025 files in other folders)
