[tool.poetry]
name = "dqc"
version = "0.0.2"
description = "Model-agnostic tools for distributed quantum computing, starting with an HDH-based IR."
authors = ["Maria Gragera Garces <m.gragera.gaces@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "dqc" }]
homepage = "https://pypi.org/project/dqc/"
repository = "https://github.com/grageragarces/dqc"  # â† optional
keywords = ["quantum", "compiler", "distributed", "hdh"]

[tool.poetry.dependencies]
python = "^3.10"
qiskit = "^1.0"
networkx = "^3.0"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
